--- a/parcial/public/index.html
+++ b/parcial/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,13 +22,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1>Alcaldía Municipal de San Pedro</h1>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <h1>Alcaldía Municipal de San Pedro</h1>
+  <p>Sistema de Licitaciones</p>
+  <hr>
+  <h1>Reglas de la licitacion</h1>
+  <p>
+    1. Al momento de ingresar, el participante inicia su oferta con el valor base (definido por la
+    alcaldía), si nadie más ha ingresado a la licitación; de lo contrario ingresa con una oferta
+    igual a la mayor oferta de la sala, más un valor aleatorio entre $5.000.000 y $10.000.000.
+  </p>
+  <p>
+    2.La asignación del contrato también es aleatoria basada en un ensayo de Bernoulli con
+    probabilidad de éxito (PB) igual a un número aleatorio entre (0.3 y 0.8) y la asignación se
+    hace de forma inmediata. Esto significa que al momento de ingresar a la licitación o hacer
+    una oferta, se genera un número aleatorio para definir PB; luego se genera otro número
+    aleatorio en el mismo rango (0.3 y 0.8) que es la probabilidad de éxito del ofertante (PO). Si
+    PO > PB, entonces el contrato se asigna al contratista con el precio ofertado. Si esta
+    condición no se cumple, se siguen esperando ofertas hasta que la condición se cumpla.
+  </p>
+  <p>
+    3. Los participantes solo pueden ofertar con tiempos de espera de 30 segundos. Esto quiere
+    decir que el botón para hacer ofertas solo se activa luego de 30 segundos desde la última
+    oferta.
+  </p>
+  <br>
+  <h1>Formulario de inscripción</h1>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -40,5 +63,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
