--- a/parcial/public/index.html
+++ b/parcial/public/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div class="container">
   <h1>Alcaldía Municipal de San Pedro</h1>
   <p>Sistema de Licitaciones</p>
   <hr>
@@ -50,9 +51,13 @@
     decir que el botón para hacer ofertas solo se activa luego de 30 segundos desde la última
     oferta.
   </p>
-  <br>
+  <hr>
   <h1>Formulario de inscripción</h1>
   <div id="root"></div>
+  <hr>
+  <h1>Listado de ofertas</h1>
+  <div id="ofertas"></div>
+</div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
